assets/css/style.css
/* ... */
nav a {
    display: inline-block;  
    cursor: pointer;
    text-decoration: none;
    color: var(--primary-color);
    border: var(--primary-color) 0.125em solid;
    padding: 0.25em 1em;
    border-radius: 0.25em;
    font-size: 1em;
    margin: .25em;

    text-shadow: 0 0 0.25 hsl(0, 0, 100% / 0.5), 0 0 0.125em var(--primary-color);

    box-shadow: inset 0 0 0.5em 0 var(--primary-color), 0 0 0.5em 0 var(--primary-color);
    position: relative;
}

nav a::before {
    content: "";
    position: absolute;
    background: var(--primary-color);
    top: 120%;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;

    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
    filter: blur(1em);
    opacity: 0.7;
}

nav a::after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    box-shadow: 0 0 2em 0.5em var(--primary-color);
    opacity: 0;
    transition: opacity 100ms linear;
}


nav a:hover,
nav a:focus {
    background: var(--primary-color);
    color: black;
    text-shadow: none;
}

nav a:hover::before,
nav a:focus::before {
    opacity: 1;
}

nav a:hover::after,
nav a:focus::after {
    opacity: 1;
}

/* Navigation Styling End */

/* About Me Styling Start */

.about-me {
    height: 15em;
    border: .125em solid var(--primary-color);
    border-radius: 1em;
    top: 0;
    margin: 0 2em 3em 2em;
    padding: 1em;
    box-shadow: .25em .5em .5em var(--primary-color);
    background: var(--text-color);
    color: var(--primary-color);
}


.about-me h2 {
    width: 100%;
    font-size: 2.5em;
    border-bottom: .05em solid black;
    text-align: center;
    text-shadow: 1px 2px white;
    font-style: italic;

}

.about-me p {
    font-size: 1em;
    text-align: center;
    
}

/* About Me Styling End */

/* My Work Style Section */

body .projects {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    border: .125em solid var(--primary-color);
    border-radius: 1em;
    top: 0;
    margin: 0 2em 3em 2em;
    padding: 1em;
    box-shadow: .25em .5em .5em var(--primary-color);
    justify-content: space-around;
    background: var(--text-color);
    color: var(--primary-color);

}
 
.projects h2 {
    width: 100%;
    font-size: 2.5em;
    border-bottom: .05em solid black;
    text-align: center;
    text-shadow: 1px 1.5px white;
    font-style: italic;

}

/*  First Project Styling Start */

.first-container {
    padding: 2rem;
    background-image: url(../images/project-1.png);
    background-size: cover;
    
    border-radius: 1rem;
    margin: 1rem 2em 3em 2em;
    color: var(--primary-color);
    box-shadow: .25em .5em .5em var(--primary-color);
    width: 250px;
    height: 200px;
    text-align: left;

    
}

.first-container h3 {
    position: relative;
    top: 85%;
    z-index: 1;
    display: inline-block;
}

.first-container h3::after {
    content: '';
    position: absolute;
    top: -0.25rem;
    left: -2rem;
    bottom: -0.25rem;
    width: calc(100% + 4rem);
    background: var(--text-color);
    border-radius: .5em;
    z-index: -1;

    transform: scaleX(0.06);
    transform-origin: left;
    transition: transform 250ms ease-in;

}

.first-container:hover h3::after {
    transform: scaleX(1);
}

.first-container .pop-up {
    position: relative;
    top: 80%;
    z-index: 1;
    display: inline-block;
    z-index: 1;
    left: -.58rem;
    color: transparent;
    transition: color 150ms 300ms;
}

.first-container .pop-up::after {
    content: '';
    position: absolute;
    top: -.2rem;
    bottom: -.2rem;
    left: -.2rem;
    right: -.2rem;
    background: white;
    border-radius: .5em;

    z-index: -1;
    transform: scaleY(0);
    transition: transform 150ms ease-in 250ms;
    transform-origin: bottom;
}

.first-container:hover .pop-up {
    color: var(--primary-color);
}

.first-container:hover .pop-up::after {
    transform: scaleY(1);
}

.pop-up a, .pop-up a:hover, .pop-up a:visited, .pop-up a:active {
    text-decoration: none;
    color: inherit;
}

/* First Project Styling End */

/* Second Project Styling Start */

.second-container {
    padding: 2rem;
    background-image: url(https://via.placeholder.com/200/0000ff.png);
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 1rem;
    margin: 1rem 2em 3em 2em;
    color: var(--primary-color);
    box-shadow: .25em .5em .5em var(--primary-color);
    width: 200px;
    height: 150px;
    text-align: left;

    
}

.second-container h3 {
    position: relative;
    top: 75%;
    z-index: 1;
    display: inline-block;
}

.second-container h3::after {
    content: '';
    position: absolute;
    top: -0.25rem;
    left: -2rem;
    bottom: -0.25rem;
    width: calc(100% + 4rem);
    background: var(--text-color);
    border-radius: .5em;

    z-index: -1;

    transform: scaleX(0.06);
    transform-origin: left;
    transition: transform 250ms ease-in;

}

.second-container:hover h3::after {
    transform: scaleX(1);
}

.second-container .pop-up {
    position: relative;
    top: 66%;
    z-index: 1;
    display: inline-block;
    z-index: 1;
    left: .73rem;
    color: transparent;
    transition: color 150ms 300ms;
}

.second-container .pop-up::after {
    content: '';
    position: absolute;
    top: -.2rem;
    bottom: -.2rem;
    left: -.2rem;
    right: -.2rem;
    background: white;
    border-radius: .5em;

    z-index: -1;
    transform: scaleY(0);
    transition: transform 150ms ease-in 250ms;
    transform-origin: bottom;
}

.second-container:hover .pop-up {
    color: var(--primary-color);
}

.second-container:hover .pop-up::after {
    transform: scaleY(1);
}
/* ... */

